# orca

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md  build_static_openssl.sh  create_static_binary.sh  static_build.sh
.github/workflows/: release.yml
docs/: mechanism.md
orca/: Cargo.toml
orca-container/: Cargo.toml
orca-container/src/: container.rs  image.rs  lib.rs
orca-container/src/container/: child.rs  parent.rs
orca-container/src/container/parent/: io_connector.rs
orca-image/: Cargo.toml
orca-image/src/: image.rs  lib.rs
orca-mount/: Cargo.toml
orca-mount/src/: lib.rs
orca-vcs/: Cargo.toml
orca-vcs/src/: lib.rs
orca/src/: args.rs  main.rs
src/: args.rs  command.rs  common.rs  container.rs  image.rs  lib.rs  main.rs  mount.rs  syscall.rs  terminal.rs  vcs.rs
src/container/: child.rs  id.rs  io_connector.rs  parent.rs  terminal.rs
src/container/parent/: io_connector.rs  mapping_id.rs
src/image/: guest_image.rs  host_image.rs  image_downloader.rs
src/image/guest_image/: merger.rs
