[package]
name = "orca"
version = "0.5.0"
authors = ["nomlab <https://github.com/nomlab>"]
edition = "2024"
description = "Lightweight Container Management Tool written by Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.30", features = ["sched", "term", "ioctl", "mount", "fs", "user"] }
clap = { version = "4.5", features = ["derive", "string"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
retry = "2.1"
tar = "0.4"
flate2 = "1.1"
anyhow = "1.0"
rm_rf = "0.6"
walkdir = "2.5"
toml = "0.8"
chrono = "0.4"
sha1 = "0.10"
thiserror = "2.0"
os_pipe = "1.2"
const_format = "0.2"
