[workspace]
members = [
    "orca",
    "orca-container",
    "orca-image",
    "orca-mount",
    "orca-vcs",
]
resolver = "3"

[workspace.package]
version = "0.5.0"
authors = ["nomlab <https://github.com/nomlab>"]
edition = "2024"
description = "Lightweight Container Management Tool written by Rust"
license-file = "LICENSE"
