[package]
name = "orca-container"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
nix = { version = "0.30", features = ["sched", "term", "ioctl", "fs", "user"] }
anyhow = "1.0"
orca-mount = { path = "../orca-mount" }
orca-image = { path = "../orca-image" }
os_pipe = "1.2"
const_format = "0.2"
