[package]
name = "orca-image"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
anyhow = "1.0"
orca-mount = { path = "../orca-mount" }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tar = "0.4"
flate2 = "1.1"
