[package]
name = "orca-image"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
tar = "0.4"
flate2 = "1.1"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rm_rf = "0.6"
walkdir = "2.5"
