[package]
name = "orca-vcs"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.10"
thiserror = "2.0"
toml = "0.9"
anyhow = "1.0"
